--- a/requirements.txt
+++ b/requirements.txt
@@ -13,18 +13,25 @@ charset-normalizer==2.0.12
 cleo==1.0.0a5
 click==8.0.4
 colorama==0.4.4
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==5.3
 crashtest==0.3.1
 cryptography==38.0.1
 cupshelpers==1.0
 dbus-python==1.2.16
+defusedxml==0.7.1
 distlib==0.3.6
 distro==1.5.0
-Django~=3.2.6
+Django==4.1.1
+django-cors-headers==3.13.0
+django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+djoser==2.1.0
 docker-pycreds==0.4.0
 docutils==0.16
+drf-spectacular==0.24.1
 dulwich==0.20.46
 factory-boy==3.2.1
 Faker==14.2.0
@@ -41,6 +48,7 @@ importlib-resources==5.9.0
 inflection==0.5.1
 iniconfig==1.1.1
 itsdangerous==2.1.0
+itypes==1.2.0
 jaraco.classes==3.2.2
 jeepney==0.8.0
 Jinja2==3.0.3
@@ -55,6 +63,7 @@ more-itertools==8.14.0
 msgpack==1.0.4
 net_monitor==0.30
 numpy==1.19.4
+oauthlib==3.2.1
 packaging==21.3
 pexpect==4.8.0
 Pillow==9.2.0
@@ -65,9 +74,11 @@ pluggy==1.0.0
 poetry==1.2.1
 poetry-core==1.2.0
 poetry-plugin-export==1.0.7
+postgres==4.0
 psutil==5.7.3
 psycopg2==2.8.6
 psycopg2-binary==2.9.3
+psycopg2-pool==1.1
 ptyprocess==0.7.0
 py==1.11.0
 pycairo==1.20.0
@@ -93,19 +104,24 @@ pytest-django==4.5.2
 pytest-factoryboy==2.5.0
 python-daemon==2.2.4
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 python-gettext==4.0
 python-gnupg==0.4.6
 python-manatools==0.0.3
+python3-openid==3.2.0
 pytz==2022.2.1
 PyYAML==5.3.1
 reportlab==3.6.2
 requests==2.27.1
+requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
 rpm==4.16.1.3
 SecretStorage==3.3.3
 shellingham==1.5.0
 sip==4.19.24
 six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
 sortedcontainers==2.3.0
 SQLAlchemy==1.3.20
 sqlparse==0.4.2
@@ -114,6 +130,7 @@ tomli==2.0.1
 tomlkit==0.11.4
 typing_extensions==4.3.0
 tzdata==2022.2
+uritemplate==4.1.1
 urllib3==1.26.8
 versiontools==1.9.1
 virtualenv==20.16.5
@@ -122,6 +139,3 @@ webencodings==0.5.1
 websocket-client==0.57.0
 Werkzeug==2.0.3
 zipp==3.8.1
-
-djoser~=2.1.0
-python-dotenv~=0.19.2
